implemented products/list endpoint functionality
